[tool.poetry]
name = "requirements-llm"
version = "0.1.0"
description = ""
authors = ["Ana Martínez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "requirements_llm"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
langchain-neo4j = "^0.3.0"
langchain-experimental = "^0.3.4"
neo4j = "^5.28.1"
langchain-huggingface = "^0.1.2"
jupyter = "^1.1.1"
langchain-groq = "^0.2.4"
llama-index = "^0.12.19"
llama-index-graph-stores-neo4j = "^0.4.6"
nest-asyncio = "^1.6.0"
llama-index-llms-huggingface = "^0.4.2"
llama-index-llms-huggingface-api = "^0.3.1"
transformers = {extras = ["torch"], version = "^4.49.0"}
huggingface-hub = {extras = ["inference"], version = "^0.29.1"}
llama-index-llms-groq = "^0.3.1"
llama-index-embeddings-huggingface = "^0.5.1"
networkx = "^3.4.2"
gravis = "^0.1.0"
llama-index-retrievers-bm25 = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
